Fix text overflow + code quality test

--- a/src/dapps/ScheduleTransaction/ScheduleTransaction.scss
+++ b/src/dapps/ScheduleTransaction/ScheduleTransaction.scss
@@ -201,3 +201,7 @@ h2 {
 .fa-spinner {
   animation: spinner 2s linear infinite;
 }
+
+.tx-scheduled-notification {
+  overflow-wrap: break-word;
+}
